--- a/Earth_In_Beats.WebService/Earth_In_Beats.WebService.WCF/Earth_In_Beats.WebService.WCF.csproj
+++ b/Earth_In_Beats.WebService/Earth_In_Beats.WebService.WCF/Earth_In_Beats.WebService.WCF.csproj
@@ -89,17 +89,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Earth_In_Beats.WebService.Contracts\Earth_In_Beats.WebService.Contracts.csproj">
+    <ProjectReference Include="..\Earth_In_Beats.WebService.Contracts\Earth_In_Beats.WebService.Business.Contracts.csproj">
       <Project>{5cfcc4da-5288-41cb-8bb1-8ac0c712104f}</Project>
-      <Name>Earth_In_Beats.WebService.Contracts</Name>
+      <Name>Earth_In_Beats.WebService.Business.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\Earth_In_Beats.WebService.IoC\Earth_In_Beats.WebService.IoC.csproj">
       <Project>{01d3e8dc-d1ff-455a-b2db-7f929fedcd32}</Project>
       <Name>Earth_In_Beats.WebService.IoC</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Result\Result.csproj">
-      <Project>{d6ce1f9a-c267-4681-9236-ad799a1e2db5}</Project>
-      <Name>Result</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
