Update web service interface and business logic.

--- a/Earth_In_Beats.WebService/Earth_In_Beats.WebService.DAL.Fake.Implementation/Earth_In_Beats.WebService.DAL.Fake.Implementation.csproj
+++ b/Earth_In_Beats.WebService/Earth_In_Beats.WebService.DAL.Fake.Implementation/Earth_In_Beats.WebService.DAL.Fake.Implementation.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Earth_In_Beats.WebService.DAL.Contracts">
+      <HintPath>..\Earth_In_Beats.WebService.DAL.Contracts\bin\Debug\Earth_In_Beats.WebService.DAL.Contracts.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,7 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DeviceRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
