--- a/Earth_In_Beats.WebService/Earth_In_Beats.WebService.Business.Implementation/Earth_In_Beats.WebService.Business.Implementation.csproj
+++ b/Earth_In_Beats.WebService/Earth_In_Beats.WebService.Business.Implementation/Earth_In_Beats.WebService.Business.Implementation.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Mapper\Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DeviceService.cs" />
+    <Compile Include="Services\TrackService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Earth_In_Beats.WebService.Contracts\Earth_In_Beats.WebService.Business.Contracts.csproj">
